--- a/src/views/productCart.html
+++ b/src/views/productCart.html
@@ -26,7 +26,7 @@
       </div>
       <div class="contenido">
         <div class="album info">
-          <img class="img" src="img/louisarmstrong.jpg" alt="" />
+          <img class="img" src="images/louisarmstrong.jpg" alt="" />
         </div>
         <div class="info">
           <h2 class="datos">Titulo</h2>
