--- a/src/views/productDetail.html
+++ b/src/views/productDetail.html
@@ -15,8 +15,8 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/styles.css">
-    <script src="https://kit.fontawesome.com/c1014e3fce.js" crossorigin="anonymous"></script>
+      <link rel="stylesheet" href="/css/styles.css">
+      <script src="https://kit.fontawesome.com/c1014e3fce.js" crossorigin="anonymous"></script>
     <title>Producto</title>
   </head>
   <body>
@@ -24,7 +24,7 @@
       <a class="hamburguer-button" href="#"><i class="fas fa-bars"></i></a>
       <a class="logo" href="#"><i class="fas fa-compact-disc"></i></a>
       <a class="search" href="#"><i class="fas fa-search"></i></a>
-      <a class="cart" href="#"><i class="fas fa-shopping-cart"></i></a>
+      <a class="cart" href="/carrito"><i class="fas fa-shopping-cart"></i></a>
   </header>
     <!-- <div class="navbar">Aqui debe ir el navbar</div> -->
     <div class="banner">
@@ -41,7 +41,9 @@
         <div class="banner-preview">
           <img src="/images/louisarmstrong.jpg" alt="" />
         </div>
-        <div class="banner-year">1999</div>
+        <div class="banner-aditional">
+          <div class="banner-year"><p><date>1999</date></p></div>
+        </div>
       </div>
     </div>
     <!-- <div class="fondo">
