--- a/src/views/productCart.html
+++ b/src/views/productCart.html
@@ -42,8 +42,8 @@
           <p class="datos"><strong>$12.34</strong></p>
         </div>
         <div class="cantidad">
-          <p>cantidad</p>
-          <select name="" id="">
+          <label for="cantidad-discos">cantidad</label>
+          <select name="cantidad-discos" id="cantidad-discos">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -56,7 +56,8 @@
             <option value="10">10</option>
           </select>
           <br />
-          <img class="eliminar" src="/icons/eliminar.svg" alt="" />
+          <!-- <img class="eliminar" src="/icons/eliminar.svg" alt="" /> -->
+          <i class="far fa-trash-alt eliminar"></i>
         </div>
       </div>
       <div class="prueba">
@@ -73,7 +74,7 @@
           <br />
           <div class="precio">
             <p><strong>$12.34</strong></p>
-            <button>Aplicar</button>
+            <button>Pagar</button>
           </div>
         </div>
       </div>
