--- a/src/views/productDetail.html
+++ b/src/views/productDetail.html
@@ -46,23 +46,13 @@
         </div>
       </div>
     </div>
-    <!-- <div class="fondo">
-      <div class="producto">
-        <h3 class="datos">Artista</h3>
-        <h2 class="datos">Album</h2>
-        <div class="foto">
-          <img class="img datos" src="img/louisarmstrong.jpg" alt="" />
-        </div>
-        <h3>Año de lanzamiento</h3>
-      </div>
-    </div> -->
     <div class="agregar">
       <div class="precio">
         <p>Precio</p>
         <p><strong>$12.34</strong></p>
       </div>
       <div class="carrito">
-        <button>agregar al carrito</button>
+        <button>Agregar al carrito</button>
       </div>
     </div>
     <div class="lista">
