--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -1,64 +1,887 @@
 * {
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
 .main-header {
     display: flex;
+    position: relative;
     padding: 10px;
-    border: 2px black solid;
+    border: 0 2px 2px 2px black solid;
     min-width: 360px;
-    max-width: 576px;
     color: black;
 }
 
 .hamburguer-button {
-    font-size:28px;
+    font-size: 28px;
     color: black;
     padding: 5px;
+    position: relative;
 }
 
 .logo {
-    display: inline-block;
-    font-size:28px;
+    margin: auto;
     padding: 5px;
-    color: black;
-    margin : 0 18% 0 35%;
-    flex-grow: 1;
+    left: 34%;
+    width: 130px;
+    height: 32px;
+}
+
+.seeker {
+    display: none;
+}
+
+#search-field{
+    display: none;
 }
 
 .search {
     font-size:28px;
+    color:rgb(68, 143, 213);
     padding: 5px;
-    color: #4b88e4;
+    position: absolute;
+    right: 55px;
+}
+
+.user {
+    display: none;
 }
 
 .cart {
-    font-size:28px;
+    font-size: 28px;
     padding: 5px;
-    margin: 0 0 0 10px;
     color: rgb(163, 158, 158);
+    position: absolute;
+    right: 10px;
 }
+
+.BMG{
+    width: 100%;
+    height: 100%;
+    color: black;
+    flex-grow: 1;
+}
+
+#BMGfoot {
+    width: 130px;
+    height: 32px;
+    padding: 5px;
+    color: black;
+}
+
+.menu {
+    display: none; /*Menu desaparecido pero ya listo de 360px a 991px*/
+    border-radius: 1.5px;
+    width: 200px;
+    padding: 0;
+    position: absolute;
+    z-index: 1;
+    background-color: white;
+    text-align: left;
+    color: rgb(119, 118, 118);
+}
+
+#menu-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+#menu-item {
+    padding: 10px;
+    margin: 10px;
+}
+
+.searcher {
+    display: flex;
+    display: none; /*Busqueda desplegable lista para 360px a 991px*/
+    width: 50%;
+    max-width: 250px;
+    padding: 0;
+    position: absolute;
+    right: 55px;
+    z-index: 1;
+    background-color: white;
+}
+
+#searcher-field {
+    border: none;
+    width: 100%;
+}
+
+#search-field-item {
+    font-size:20px;
+    color:rgb(0, 0, 0);
+    padding: 5px;
+    border: none;
+    background-color: white;
+}
+
 
 .first-section {
     background-image: url('/images/fondoPrincipal.jpg');
     background-size: cover;
-    height: 600px;
+    height: 670px;
 }
 
 #principal-title {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
-    font-size: 40px;
-    color: #afb13b;
+    font-size: 38px;
+    color: #ffffff;
     text-align: center;
-    margin: 0 0 10px 0;
-    padding: 10px 0;
+    margin: 0 30px 15px 30px;
+    padding: 25px 0;
+    text-align: left;
+    text-transform: uppercase; 
+    max-width: 300px;
 }
 
 .paragraph {
     font-family: 'Roboto', sans-serif;
-    font-weight: 100;
-    font-size: 20px;
-    color: #24cc8c;
+    font-weight: 400;
+    font-size: 18px;
+    margin: 0 auto;
+    padding: 0 20px 0 20px;
+    color: rgb(218, 107, 23);
     text-align: center;
+    max-width: 400px;
+}
+
+.paragraph-until-992{
+    display: none;
+}
+
+.add-cart {
+    background-color: white;
+    font-family: 'Roboto', sans-serif;
+    color: grey;
+    display: block;
+    margin: 25px auto;
+    border-radius: 25px;
+    height: 40px;
+    width: 140px;
+    border: none;
+}
+
+.elements-until-992 {
+    display: none;
+}
+
+.elements-until-768 {
+    display: none;
+}
+
+.elements {
+    display: flex;
+    justify-content: space-around;
+    font-family: 'Roboto', sans-serif;
+    margin: 30px;
+}
+
+.Right-Scroll {
+    background-color: white;
+    text-align: center;
+    color: grey;
+    display: inline-block;
+    border-radius: 25px;
+    height: 40px;
+    width: 140px;
+    border: none;
+}
+
+.album-home {
+    margin: 10px;
+    font-family: 'Roboto', sans-serif;
+    padding: 10px;
+}
+
+.album-home p {
+    color: white;
+    font-weight: 100;
+    font-size: 18px;
+    text-align: left;
+    padding: 0 5px 20px 5px;
+}
+
+.album-home#house {
+    background-color: gray;
+}
+
+.album-home #strictly {
+    width: 100%;
+    height: 50%;
+}
+
+.album-home#rock {
+    background-color: yellow;
+}
+
+.album-home #beatles {
+    width: 100%;
+    height: 50%;
+}
+
+.album-home#techno {
+    background-color: green;
+}
+
+.album-home #underground {
+    width: 100%;
+    height: 50%;
+}
+
+h2 {
+    font-weight: 400;
+    font-size: 20px;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+footer h2 {
+    color: #7d7e80;
+    font-size: 13px;
+    text-transform: none;
+}
+
+.album-home a {
+    display: block;
+    text-align: right;
+    margin: 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-style: italic;
+    color: black
+}
+
+.foot {
+    font-family: 'Roboto', sans-serif;
+    background-color: #3a3c44;
+    display: flex;
+    flex-direction: column;
+    height: 660px;
+}
+
+.foot img {
+    margin: 20px;
+}
+
+.social-networks {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    font-size:28px;
+    padding: 5px;
+    margin: 0 0 20px 0;
+}
+
+.social-logo#facebook {
+    color:#4267B2;
+}
+
+.social-logo#twitter {
+    color:rgb(0, 131, 253)
+}
+
+.social-logo#instagram {
+    color: white;
+}
+
+.extra-info .unordered-list {
+    padding: 0 0 0 20px;
+}
+
+.extra-info h3 {
+    color: white;
+    margin: 10px;
+    padding: 0 0 0 15px;
+    font-weight: 300;
+    font-size: 15px;
+    text-align: left;
+    text-transform: uppercase;
+}
+
+.extra-info ul li {
+    color: #9195a3;
+    list-style: none;
+    text-align: left;
+    padding: 8px;
+}
+
+@media (min-width: 576px) {
+    .first-section {
+        height: 530px;
+    }
+
+    #principal-title {
+        text-align: center;
+        max-width: 700px;
+    }
+
+    .search {
+        font-size:28px;
+        color:rgb(68, 143, 213);
+        padding: 5px;
+        position: absolute;
+        right: 90px
+    }
+}
+
+@media (min-width: 768px) {
+
+    .user {
+        display: inline;
+        font-size:28px;
+        color:rgb(0, 0, 0);
+        padding: 5px;
+        position: absolute;
+        right: 175px;
+    }
+
+    .first-section {
+        height: 480px;
+    }
+
+    #principal-title {
+        text-align: center;
+        max-width: 100%;
+    }
+
+    .paragraph-and-elements {
+        display: flex;
+        flex-wrap: wrap;
+        position: relative;
+        height: 180px;
+        
+    }
+
+    .paragraph {
+        font-family: 'Roboto', sans-serif;
+        font-weight: 400;
+        font-size: 18px;
+        margin: 0 50px;
+        padding: 0 20px 0 20px;
+        color: rgb(218, 107, 23);
+        text-align: left;
+    }
+
+    .elements-until-768 {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        right: 80px;
+        justify-content: space-between;
+        font-family: 'Roboto', sans-serif;
+        height: 100%;
+    }
+
+    .Right-Scroll-until-768 {
+        background-color: white;
+        text-align: center;
+        color: grey;
+        display: inline-block;
+        border-radius: 25px;
+        height: 30px;
+        width: 130px;
+        border: none;
+    }
+
+    .Right-Scroll-until-768#element1 {
+        position: relative;
+        right: 50px;
+    }
+
+    .Right-Scroll-until-768#element2 {
+        position: relative;
+        right: 30px;
+    }
+
+    .Right-Scroll-until-768#element3 {
+        position: relative;
+        right: 10px;
+    }
+
+    .first-section .elements {
+        display: none; /*ESTE ES EL QUE NO ME FUNCIONA.*/
+    }
+
+    .add-cart {
+        height: 30px;
+        width: 140px;
+
+    }
+
+    .album-section {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .album-home p {
+        padding: 0 5px 20px 5px;
+    }
+    
+    .album-home a {
+        display: block;
+        text-align: right;
+        margin: 10px;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-style: italic;
+        color: black
+    }
+
+    .album-home#house {
+        width: 47%;
+        height: 50%;
+    }
+
+    .album-home#rock {
+        width: 47%;
+        height: 50%;
+    }
+
+    .album-home#techno {
+        width: 47%;
+        height: 50%;
+    }
+
+    .social-networks {
+        justify-content: flex-start;
+        padding: 0 0 0 25px;
+        margin: 0 0 20px 0;
+    }
+
+    .social-logo#twitter {
+        margin-left: 20px;
+    }
+    
+    .social-logo#instagram {
+        margin-left: 20px;
+    }
+    
+    .extra-info h3 {
+        color: white;
+        margin: 5px;
+        font-weight: 300;
+        font-size: 13px;
+    }
+    
+    .extra-info ul li {
+        font-size: 11px;
+        text-align: left;
+    }
+
+    .foot {
+        height: 230px;
+    }
+
+    #footer-desktop-view {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .extra-info {
+        margin-top: 20px;
+    }
+
+    .extra-info ul li {
+        font-size: 14px;
+    }
+
+    footer h2 {
+        color: #7d7e80;
+        font-size: 13px;
+        text-transform: none;
+    }
+
+}
+
+@media (min-width: 992px) {
+
+
+
+    /*A modificar :*/
+
+    .main-header {
+        display: flex;
+        position: relative;
+        padding: 10px;
+        border: 0 2px 2px 2px black solid;
+        min-width: 360px;
+        color: black;
+    }
+    
+    .hamburguer-button {
+        align-self: center;
+        font-size: 28px;
+        color: black;
+        padding: 5px;
+        position: absolute;
+        order: 2;
+        margin: 0 0 0 32px;
+        left: 160px;
+    }
+    
+    .logo {
+        align-self: center;
+        padding: 5px;
+        height: 32px;
+        order: 1;
+        margin: 0 0 0 16px;
+    }
+    
+    .seeker {
+        display: block;
+        align-self: center;
+        border: 0.5px rgb(175, 173, 173) solid;
+        border-radius: 50px;
+        height: 60%;
+        width: 55%;
+        order: 3;
+        margin: 0 0 0 32px;
+        position: absolute;
+        right: 188px;
+    }
+    
+    .search {
+        font-size:20px;
+        align-self: center;
+        color:rgb(68, 143, 213);
+        padding: 5px;
+        position: absolute;
+        right: 200px;
+        order: 4;
+    }
+    
+    .user {
+        display: block;
+        align-self: center;
+        font-size: 28px;
+        padding: 5px;
+        order: 5;
+        position: absolute;
+        right: 100px;
+    }
+    
+    .cart {
+        font-size: 28px;
+        align-self: center;
+        padding: 5px;
+        color: rgb(163, 158, 158);
+        order: 6;
+    }
+    
+    .BMG{
+        width: 100%;
+        height: 100%;
+        color: black;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+    .first-section {
+        height: 480px;
+    }
+
+    #principal-title {
+        text-align: left;
+        max-width: 480px;
+    }
+
+    .title-paragraph-and-elements-until-992{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: flex-start;
+    }
+
+    .title-paragraph-until-992 {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: flex-start;
+    }
+
+    .paragraph-until-992 {
+        display: block;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 400;
+        font-size: 18px;
+        width: 50%;
+        margin: 0 0 0 15px;
+        padding: 0 20px 0 20px;
+        color: rgb(218, 107, 23);
+        text-align: left;
+    }
+
+    .elements-until-992 {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+
+    .paragraph-and-elements {
+        display: none;
+    }
+
+    .elements-until-768 {
+        display: none;
+    }
+
+    .Right-Scroll-until-992 {
+        background-color: white;
+        text-align: center;
+        color: grey;
+        display: inline-block;
+        border-radius: 25px;
+        height: 30px;
+        width: 130px;
+        border: none;
+        font-size: 12px;
+    }
+
+    .add-cart {
+        position: absolute;
+        left: 150px;
+        background-color: white;
+        text-align: center;
+        color: grey;
+        font-size: 12px;
+        display: inline-block;
+        border-radius: 25px;
+        height: 30px;
+        width: 130px;
+        border: none;
+    }
+
+    .Right-Scroll-until-992#element1 {
+        position: relative;
+        right: 60px;
+    }
+
+    .Right-Scroll-until-992#element2 {
+        position: relative;
+        right: 30px;
+    }
+
+    .Right-Scroll-until-992#element3 {
+        position: relative;
+        right: 0;
+    }
+
+    .album-section {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .album-home p {
+        padding: 0 10px 20px 10px;
+    }
+    
+    .album-home a {
+        display: block;
+        text-align: right;
+        margin: 10px;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-style: italic;
+        color: black
+    }
+
+    .album-home#house {
+        width: 30%;
+    }
+
+    .album-home#rock {
+        width: 30%;
+    }
+
+    .album-home#techno {
+        width: 30%;
+    }
+
+}
+
+@media (min-width: 1200px) {
+
+    /*Font-size the p de albums en 18 normalmente, hacerla crecer hasta 19 0 20 px y aumentar el margin del parrafo también*/
+
+    .first-section {
+        height: 620px;
+    }
+
+    #principal-title {
+        font-size: 48px;
+        max-width: 550px;
+    }
+
+    .paragraph-until-992 {
+        font-size: 20px;
+    }
+
+    .elements-until-992 {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+
+    .Right-Scroll-until-992 {
+        height: 40px;
+        width: 140px;
+        font-size: 16px;
+    }
+
+    .add-cart {
+        height: 40px;
+        width: 140px;
+        font-size: 16px;
+    }
+
+    .Right-Scroll-until-992#element1 {
+        position: relative;
+        right: 40px;
+    }
+
+    .Right-Scroll-until-992#element2 {
+        position: relative;
+        right: 0px;
+    }
+
+    .Right-Scroll-until-992#element3 {
+        position: relative;
+        right: -40px;
+    }
+
+    .album-section {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .album-home {
+        max-width: 400px;
+        max-height: 650px;
+    }
+
+    .album-home p {
+        padding: 0 10px 20px 10px;
+    }
+    
+    .album-home a {
+        display: block;
+        text-align: right;
+        margin: 10px;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-style: italic;
+        color: black
+    }
+
+    footer h2 {
+        font-size: 15px;
+    }
+
+}
+
+
+@media (min-width: 1500px) {
+
+    /*Font-size the p de albums en 18 normalmente, hacerla crecer hasta 19 0 20 px y aumentar el margin del parrafo también*/
+
+    .hamburguer-button {
+        align-self: center;
+        font-size: 28px;
+        color: black;
+        padding: 5px;
+        position: absolute;
+        order: 2;
+        margin: 0 0 0 32px;
+        left: 300px;
+    }
+    
+    .logo {
+        align-self: center;
+        padding: 5px;
+        height: 40px;
+        width: 180px;
+        order: 1;
+        margin: 0 0 0 16px;
+    }
+
+    .first-section {
+        height: 680px;
+    }
+
+    .title-paragraph-and-elements-until-992 {
+        padding: 30px 0;
+        
+    }
+
+    .title-paragraph-until-992 {
+        position: relative;
+        flex-grow: 1;
+        left: 12%;
+    }
+
+    .elements-until-992 {
+        width: 40%;
+    }
+
+    .add-cart {
+        position: relative;
+        left: 24%;
+    }
+
+    .album-home {
+        max-height: 700px;
+    }
+
+    .foot {
+        height: 250px;
+    }
+
+    #logo-social-networks {
+        position: relative;
+        left: 80px;
+    } 
+
+    .album-home p {
+        padding: 0 13px 20px 13px;
+        font-size: 22px;
+    }
+
+    .extra-info h3 {
+        font-size: 18px;
+    }
+
+    .extra-info ul li {
+        font-size: 16px;
+    }
+
+    .foot h2 {
+        margin-top: 60px;
+    }
+
+    
+    .foot {
+        height: 100%;
+    }
+
 }
