--- a/src/public/css/stylesLogin.css
+++ b/src/public/css/stylesLogin.css
@@ -1,82 +1,90 @@
-/*LOGIN*/
-
-/*Body---------------------------------------------------------*/
-body {
-  background-color: #f5f5f5;
-  display: flex;
-  flex-flow: column;
-  font-size: 1.1rem;
-  font-family: "Roboto";
+* {
+  box-sizing: border-box;
 }
 
+body {
+  font-family: 'Roboto', sans-serif;
+}
 
+.logo {
+  display: block;
+  margin: 30px auto;
+  padding: 5px;
+  width: 200px;
+  height: 70px;
+}
 
-/*Formulario---------------------------------------*/
+.BMG{
+  display: block;
+  padding: 20px 0;
+  margin: 0 auto;
+  width: 100%;
+  height: 120%;
+  color: blue;
+}
 
 h1 {
-  text-align: center;
-  color: #605E5E;
-  font-family: sans-serif;
-  font-size: 3rem;
-  padding: 1rem;
+  font-size: 25px;
+  margin: 25px auto;
+  width: 150px;
 }
 
-.formulario {
-  background-color:#FAFAFA;
-  color: #605E5E;
+#main {
+  height: 80vh;
+}
+
+#login-and-text-container {
+  background-image: url("/images/vinyl-login-bottom.jpeg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  width: 100%;
+  height: 100%;
+}
+
+#login {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
   width: 90%;
-  text-align: center;
-  font-family: sans-serif;
-  font-size: 2rem;
-  margin: 20px auto;
-  padding: 2rem;
-  border: rgba(96, 94, 94, 0.3);
-  border-style: solid;
-  border-radius: 1rem;
-  left: 40%;
-  right: 60%;
-  box-sizing: border-box;
+  height: 275px;
+  border: 1px gray solid;
+  border-radius: 10px;
 }
 
-.olvidaste {
-  text-align: center;
-  font-size: 1rem;
-  text-decoration: underline;
-  font-style: italic;
-}
-.todavia-no {
-  font-family: sans-serif;
-  color: #62c5e8;
-  text-align: left;
-  font-size: 1rem;
-  text-decoration: none;
-  font-style: italic;
-  padding-bottom: .1rem;
-  margin-bottom: .1rem;
-}
-.registrate {
-  font-family: sans-serif;
-  color: #62c5e8;
-  text-align: left;
-  font-size: 1rem;
-  text-decoration: none;
-  font-style: italic;
-  padding-bottom: .1rem;
-  margin-bottom: 3rem;
+article {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-/*fin del formulario---------------------------------------*/
-
+label {
+  display: block;
+  margin: 10px 0 0 20px;
+  align-self: center;
+}
 
 input {
-  width: 90%;
-  height: 3rem;
-  margin: 1.2rem;
-  box-sizing: border-box;
-  border-radius: .2rem;
-  text-align: center;
-  font-size: 18px;
+  display: block;
+  flex-grow: 1;
+  margin: 10px 20px;
+  width: 400px;
+  height: 30px;
+  border: 0.5px solid  gray;
+  border-radius: 20px;
 }
+
+#remember-general {
+  margin: 0 auto;
+}
+
+#remember {
+  display: inline;
+  width: 20px;
+  height: 20px;
+}
+
+
 @font-face {
   font-family: "fontello";
   src: url('../font/fontello.eot');
@@ -90,64 +98,283 @@ input {
   font-style: normal;
 
 }
-#password{
-	font-family: "fontello";
-	font-style: normal;
-	font-weight: normal;
+#password,
+#rewrite-password {
+    font-family: "fontello";
+    font-style: normal;
+    font-weight: normal;
 
-	font-variant: normal;
-	text-transform: none;
+    font-variant: normal;
+    text-transform: none;
 
-	-webkit-font-smoothing: antialiased;
+    -webkit-font-smoothing: antialiased;
 
-	letter-spacing: 2px;
+    letter-spacing: 2px;
 }
-button {
-  background-color: #62c5e8;
-  font-family: sans-serif;
+
+#submit-button {
+  margin: 10px auto;
+  background-color: white;
+  text-align: center;
+  color: grey;
+  display: inline-block;
+  border-radius: 25px;
+  height: 40px;
+  width: 130px;
+  border: solid 1px black;
+}
+
+#submit-button:hover {
+  background-color: rgb(90, 90, 90);
   color: white;
-  font-weight: 720;
-  width: 6rem;
-  height: 3rem;
-  border-radius: .5rem;
+}
+
+a {
+  font-weight: bold;
+  text-decoration: none;
+}
+
+p {
+  width: 90%;
+  margin: 30px auto;
+  text-align: center;
+}
+
+#BMGfoot {
+  width: 130px;
+  height: 32px;
+  padding: 5px;
+  color: black;
+}
+
+.foot {
+  font-family: 'Roboto', sans-serif;
+  background-color: #3a3c44;
+  display: flex;
+  flex-direction: column;
+  height: 660px;
+}
+
+.foot img {
+  margin: 20px;
+}
+
+.social-networks {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  font-size:28px;
+  padding: 5px;
+  margin: 0 0 20px 0;
+}
+
+.social-logo#facebook {
+  color:#4267B2;
+}
+
+.social-logo#twitter {
+  color:rgb(0, 131, 253)
+}
+
+.social-logo#instagram {
+  color: white;
+}
+
+.extra-info .unordered-list {
+  padding: 0 0 0 20px;
+}
+
+.extra-info h3 {
+  color: white;
+  margin: 10px;
+  padding: 0 0 0 15px;
+  font-weight: 300;
+  font-size: 15px;
+  text-align: left;
   text-transform: uppercase;
 }
 
-.logo-abajo{
-  display:block;
-  padding-bottom: 2rem;
-  margin-bottom: 1rem;
-  width: 13rem;
-  position: relative;
-  top: 10%;
-  bottom: 55rem;
-  left: 1rem;  
+.extra-info ul li {
+  color: #9195a3;
+  list-style: none;
+  text-align: left;
+  padding: 8px;
 }
 
-.texto-footer{
-  font-family: sans-serif;
-  padding: .1%;
-  margin: 1rem;
+footer h2 {
+  color: #7d7e80;
+  font-size: 13px;
+  text-transform: none;
+  font-weight: 400;
+  margin: auto;
 }
 
-.texto-footer-subtitulo{
-  font-family: sans-serif;
-  padding: .1%;
-  margin: 1rem;
-  text-transform: uppercase;
-  font-size: 1.2rem;
+
+
+@media (min-width: 576px){
+  
+  body {
+      background-image: url("/images/vinyl-login-corner.jpeg");
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: top left;
+  }
+
+  #main {
+    height: 480px;
+  }
+
+  #login {
+      max-width: 450px;
+  }
+
+  #login-and-text-container {
+      background-image: none;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      width: 100%;
+      height: 460px;
+  }
+
+  p {
+      max-width: 290px;
+  }
+
 }
 
-footer {
-  background-color: #605e5e;
-  color: #f5f5f5;
-  font-family: sans-serif;
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  height: 22rem;
-  border: rgba(96, 94, 94, 0.3);
-  border-style: solid;
-  border-radius: 1rem;  
-  box-sizing: border-box;
+@media (min-width: 768px) {
+
+  #main {
+    height: 700px;
+  }
+
+  #login-and-text-container {
+    background-image: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 520px;
+    position: relative;
+    top: 80px
+}
+
+  .foot {
+      height: 100%;
+  }
+
+  #footer-desktop-view {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+  }
+
+  .extra-info {
+      margin-top: 20px;
+  }
+
+  .extra-info ul li {
+      font-size: 14px;
+  }
+
+  .social-networks {
+      justify-content: flex-start;
+      padding: 0 0 0 25px;
+      margin: 0 0 20px 0;
+  }
+
+  .social-logo#twitter {
+      margin-left: 20px;
+  }
+  
+  .social-logo#instagram {
+      margin-left: 20px;
+  }
+  
+  .extra-info h3 {
+      color: white;
+      margin: 5px;
+      font-weight: 300;
+      font-size: 13px;
+  }
+  
+  .extra-info ul li {
+      font-size: 11px;
+      text-align: left;
+  }
+
+  .foot {
+      height: 230px;
+  }
+
+  #footer-desktop-view {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+  }
+
+  .extra-info {
+      margin-top: 20px;
+  }
+
+  .extra-info ul li {
+      font-size: 14px;
+  }
+
+  footer h2 {
+      color: #7d7e80;
+      font-size: 13px;
+      text-transform: none;
+  }
+
+}
+
+@media (min-width: 1200px) {
+  footer h2 {
+      font-size: 15px;
+  }
+}
+
+@media (min-width: 1560px) {
+    body {
+      background-image: url("/images/vinyl-login-left.jpeg");
+      background-size: contain;
+      background-repeat: no-repeat;
+  }
+}
+
+@media (min-width: 1500px){
+
+  .foot {
+      height: 250px;
+  }
+
+  #logo-social-networks {
+      position: relative;
+      left: 80px;
+  } 
+
+  .album-home p {
+      padding: 0 13px 20px 13px;
+      font-size: 22px;
+  }
+
+  .extra-info h3 {
+      font-size: 18px;
+  }
+
+  .extra-info ul li {
+      font-size: 16px;
+  }
+
+  .foot h2 {
+      margin-top: 60px;
+      margin-bottom: 12.45px;
+  }
+
+  
+  .foot {
+      height: 100%;
+  }
 }
