se agrego el nuevo navbar

--- a/src/public/css/styleDetail.css
+++ b/src/public/css/styleDetail.css
@@ -133,8 +133,8 @@
 }
 
 .carrito button:hover{
-  background-color: #CA5310;
-  color: white;
+  background-color: #ce9119;
+  /* color: white; */
 }
 
 button {
