--- a/src/views/productDetail.html
+++ b/src/views/productDetail.html
@@ -22,10 +22,26 @@
   <body>
     <header class="main-header">
       <a class="hamburguer-button" href="#"><i class="fas fa-bars"></i></a>
+      <a class="logo" href="/"><img class="BMG" src="/images/logoBMG.png" alt="Logo del Sitio E-commerceBGG"></a> <!--<i class="fas fa-compact-disc"></i>-->
+      <div><input type="text" class="seeker"></div>
+      <a class="search" href="#"><i class="fas fa-search"></i></a>
+      <a href="/registro" class="user"><i class="far fa-user"></i></a>
+      <a class="cart" href="/carrito-de-compras"><i class="fas fa-shopping-cart"></i></a>
+    </header>
+    <section class="menu">
+      <ul id="menu-list">
+          <li id="menu-item">Iniciar Sesión</li>
+          <li id="menu-item">Registrarse</li>
+          <!-- <li id="menu-item">Item Tres</li>
+          <li id="menu-item">Item Cuatro</li>-->
+      </ul>
+    </section>
+    <!-- <header class="main-header">
+      <a class="hamburguer-button" href="#"><i class="fas fa-bars"></i></a>
       <a class="logo" href="#"><i class="fas fa-compact-disc"></i></a>
       <a class="search" href="#"><i class="fas fa-search"></i></a>
       <a class="cart" href="/carrito"><i class="fas fa-shopping-cart"></i></a>
-  </header>
+  </header> -->
     <!-- <div class="navbar">Aqui debe ir el navbar</div> -->
     <div class="banner">
       <div class="banner-fondo">
