--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -7,7 +7,7 @@
     display: flex;
     position: relative;
     padding: 10px;
-    border: 0 2px 2px 2px black solid;
+    border-bottom: 1px black solid;
     min-width: 360px;
     color: black;
 }
