--- a/src/views/productCart.html
+++ b/src/views/productCart.html
@@ -39,14 +39,8 @@
     <section class="searcher">
       <input type="text" id="searcher-field">
       <button id="search-field-item"><i class="fas fa-search"></i></button>
-  </section>
-    <!-- <header class="main-header">
-      <a class="hamburguer-button" href="#"><i class="fas fa-bars"></i></a>
-      <a class="logo" href="#"><i class="fas fa-compact-disc"></i></a>
-      <a class="search" href="#"><i class="fas fa-search"></i></a>
-      <a class="cart" href="/carrito"><i class="fas fa-shopping-cart"></i></a>
-  </header> -->
-    <!-- <div class="navbar">Aqui debe ir el navbar</div> -->
+    </section>
+    
     <div class="cuerpo">
       <div class="encabezado">
         <img src="/icons/carrito-de-compras.svg" width="22px" height="22px" />
@@ -54,7 +48,7 @@
       </div>
       <div class="contenido">
         <div class="album info">
-          <img class="img" src="images/louisarmstrong.jpg" alt="" />
+          <a href="/detalle-del-producto"><img class="img" src="images/greenvelvet.jpg" alt="" /></a>
         </div>
         <div class="info">
           <h2 class="datos">Titulo</h2>
@@ -99,5 +93,42 @@
         </div>
       </div>
     </div>
+    <footer class="foot">
+      <div id="footer-desktop-view">
+          <div id="logo-social-networks">
+              <img id="BMGfoot" src="/images/logoBMG-blanco.png" alt="Logo del Sitio E-commerceBGG">
+              <article class="social-networks">
+                  <a href="#" class="social-logo" id="facebook"><i class="fab fa-facebook"></i></a>
+                  <a href="#" class="social-logo" id="twitter"><i class="fab fa-twitter-square"></i></i></a>
+                  <a href="#" class="social-logo" id="instagram"><i class="fab fa-instagram"></i></i></a>
+              </article>
+          </div>
+          <div class="extra-info" id="first">
+                      <h3>Título de la Sección 1</h3>
+                      <ul class="unordered-list">
+                          <li>Elemento 1</li>
+                          <li>Elemento 2</li>
+                          <li>Elemento 3</li>
+                      </ul>
+          </div>
+          <div class="extra-info" id="second">
+                      <h3>Título de la Sección 2</h3>
+                      <ul class="unordered-list">
+                          <li>Elemento 1</li>
+                          <li>Elemento 2</li>
+                          <li>Elemento 3</li>
+                      </ul>
+          </div>
+          <div class="extra-info" id="third">
+                      <h3>Título de la Sección 3</h3>
+                      <ul class="unordered-list">
+                          <li>Elemento 1</li>
+                          <li>Elemento 2</li>
+                          <li>Elemento 3</li>
+                      </ul>
+          </div>
+      </div>
+      <h2>@2021 by BMG Records. Todos los Derechos Reservados.</h2>
+  </footer>
   </body>
 </html>
