--- a/src/views/productDetail.html
+++ b/src/views/productDetail.html
@@ -32,17 +32,13 @@
       <ul id="menu-list">
           <li id="menu-item">Iniciar Sesión</li>
           <li id="menu-item">Registrarse</li>
-          <!-- <li id="menu-item">Item Tres</li>
-          <li id="menu-item">Item Cuatro</li>-->
       </ul>
     </section>
-    <!-- <header class="main-header">
-      <a class="hamburguer-button" href="#"><i class="fas fa-bars"></i></a>
-      <a class="logo" href="#"><i class="fas fa-compact-disc"></i></a>
-      <a class="search" href="#"><i class="fas fa-search"></i></a>
-      <a class="cart" href="/carrito"><i class="fas fa-shopping-cart"></i></a>
-  </header> -->
-    <!-- <div class="navbar">Aqui debe ir el navbar</div> -->
+    <section class="searcher">
+      <input type="text" id="searcher-field">
+      <button id="search-field-item"><i class="fas fa-search"></i></button>
+    </section>
+  
     <div class="banner">
       <div class="banner-fondo">
         <div class="banner-fondo-img"></div>
@@ -50,12 +46,12 @@
       <div class="container">
         <div class="banner-header">
           <h1 class="banner-albumName">Album</h1>
-          <h2 class="banner-artistName">
+          <label class="banner-artistName">
             <a href="#">artista</a>
-          </h2>
+          </label>
         </div>
         <div class="banner-preview">
-          <img src="/images/louisarmstrong.jpg" alt="" />
+          <img src="/images/greenvelvet.jpg" alt="" />
         </div>
         <div class="banner-aditional">
           <div class="banner-year"><p><date>1999</date></p></div>
@@ -104,5 +100,42 @@
         <p>3:00</p>
       </div>
     </div>
+    <footer class="foot">
+      <div id="footer-desktop-view">
+          <div id="logo-social-networks">
+              <img id="BMGfoot" src="/images/logoBMG-blanco.png" alt="Logo del Sitio E-commerceBGG">
+              <article class="social-networks">
+                  <a href="#" class="social-logo" id="facebook"><i class="fab fa-facebook"></i></a>
+                  <a href="#" class="social-logo" id="twitter"><i class="fab fa-twitter-square"></i></i></a>
+                  <a href="#" class="social-logo" id="instagram"><i class="fab fa-instagram"></i></i></a>
+              </article>
+          </div>
+          <div class="extra-info" id="first">
+                      <h3>Título de la Sección 1</h3>
+                      <ul class="unordered-list">
+                          <li>Elemento 1</li>
+                          <li>Elemento 2</li>
+                          <li>Elemento 3</li>
+                      </ul>
+          </div>
+          <div class="extra-info" id="second">
+                      <h3>Título de la Sección 2</h3>
+                      <ul class="unordered-list">
+                          <li>Elemento 1</li>
+                          <li>Elemento 2</li>
+                          <li>Elemento 3</li>
+                      </ul>
+          </div>
+          <div class="extra-info" id="third">
+                      <h3>Título de la Sección 3</h3>
+                      <ul class="unordered-list">
+                          <li>Elemento 1</li>
+                          <li>Elemento 2</li>
+                          <li>Elemento 3</li>
+                      </ul>
+          </div>
+      </div>
+      <h2>@2021 by BMG Records. Todos los Derechos Reservados.</h2>
+  </footer>
   </body>
 </html>
