Instalación de EJS y generación de estructura recomendada
Se instalo el template engine EJS y se genero una estructura recomendada
para los archivos fomentando el patrón de diseño MVC, se tiene ahora el
entry point dentro de la carpeta 'src'.

Además dela creación de la carpeta 'routes' con sus respectivos
archivos de ruteamiento, es decir, los ruteadores de los recursos de
'main', 'products' y 'users' y finalmente para 'routes' la creación de
un último script 'index' donde se encuentran todos los modulos propios
para exportar al entry point un solo objeto literal que contenga todos
los objetos literales, asi como todos los métodos de estos de cada
recurso controller.

En la carpeta de 'controllers' con sus respectivos scripts de
cada recurso como son 'main', 'products' y 'users' con las sentencias
recomendadas.

Ahora se tienen las vistas dentro de la carpeta 'src' mencionada, además
de subcarpetas dentro de 'views' que contienen las diferentes vistas
con extensión .ejs según el recurso previamente definido para la página,
solo se cambiaron las extensiones y la parte del contenido interno de el
enlace de los hipervinculos en relación a las demás vistas para hacer
referencia a la correcta estructura que se forjo.

Y finalmente en el entry point 'app.js' se le señalo a express en la
definición de la configuración del 'view engine' el uso de 'ejs' de
ahora en adelante, asi como la ubicación de la carpeta 'views' que debe
tomar a consideración cuando se carguen las vistas en los respectivos
controladores de cada recurso; y finalmente las modificaciones pertinentes
en cuanto al escucha en la petición de especifico recurso de nuestro
servidor express con su handler adecuado.

--- a/src/src/views/main/productCart.ejs
+++ b/src/src/views/main/productCart.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styleDetail.css" />
+    <link rel="stylesheet" href="css/styleCart.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
@@ -15,9 +15,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
       rel="stylesheet"
     />
-      <link rel="stylesheet" href="/css/styles.css">
-      <script src="https://kit.fontawesome.com/c1014e3fce.js" crossorigin="anonymous"></script>
-    <title>Producto</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <script src="https://kit.fontawesome.com/c1014e3fce.js" crossorigin="anonymous"></script>
+    <title>Carrito</title>
   </head>
   <body>
     <header class="main-header">
@@ -25,79 +25,72 @@
       <a class="logo" href="/"><img class="BMG" src="/images/logoBMG.png" alt="Logo del Sitio E-commerceBGG"></a> <!--<i class="fas fa-compact-disc"></i>-->
       <div><input type="text" class="seeker"></div>
       <a class="search" href="#"><i class="fas fa-search"></i></a>
-      <a href="/registro" class="user"><i class="far fa-user"></i></a>
+      <a href="/usuario/registro" class="user"><i class="far fa-user"></i></a>
       <a class="cart" href="/carrito-de-compras"><i class="fas fa-shopping-cart"></i></a>
     </header>
     <section class="menu">
       <ul id="menu-list">
           <li id="menu-item">Iniciar Sesión</li>
           <li id="menu-item">Registrarse</li>
+          <!-- <li id="menu-item">Item Tres</li>
+          <li id="menu-item">Item Cuatro</li>-->
       </ul>
     </section>
     <section class="searcher">
       <input type="text" id="searcher-field">
       <button id="search-field-item"><i class="fas fa-search"></i></button>
     </section>
-  
-    <div class="banner">
-      <div class="banner-fondo">
-        <div class="banner-fondo-img"></div>
+    
+    <div class="cuerpo">
+      <div class="encabezado">
+        <img src="/icons/carrito-de-compras.svg" width="22px" height="22px" />
+        <p>Carrito</p>
       </div>
-      <div class="container">
-        <div class="banner-header">
-          <h1 class="banner-albumName">Album</h1>
-          <label class="banner-artistName">
-            <a href="#">artista</a>
-          </label>
+      <div class="contenido">
+        <div class="album info">
+          <a href="/detalle-del-producto"><img class="img" src="images/greenvelvet.jpg" alt="" /></a>
         </div>
-        <div class="banner-preview">
-          <img src="/images/greenvelvet.jpg" alt="" />
+        <div class="info">
+          <h2 class="datos">Titulo</h2>
+          <p class="datos">artista</p>
+          <p class="datos"><strong>$12.34</strong></p>
         </div>
-        <div class="banner-aditional">
-          <div class="banner-year"><p><date>1999</date></p></div>
+        <div class="cantidad">
+          <label for="cantidad-discos">cantidad</label>
+          <select name="cantidad-discos" id="cantidad-discos">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+          </select>
+          <br />
+          <!-- <img class="eliminar" src="/icons/eliminar.svg" alt="" /> -->
+          <i class="far fa-trash-alt eliminar"></i>
         </div>
       </div>
-    </div>
-    <div class="agregar">
-      <div class="precio">
-        <p>Precio</p>
-        <p><strong>$12.34</strong></p>
-      </div>
-      <div class="carrito">
-        <button>Agregar al carrito</button>
-      </div>
-    </div>
-    <div class="lista">
-      <h2>Canciones</h2>
-      <div class="cancion">
-        <p>#</p>
-        <p>Titulo cancion</p>
-        <p>3:00</p>
-      </div>
-      <div class="cancion">
-        <p>#</p>
-        <p>Titulo cancion</p>
-        <p>3:00</p>
-      </div>
-      <div class="cancion">
-        <p>#</p>
-        <p>Titulo cancion</p>
-        <p>3:00</p>
-      </div>
-      <div class="cancion">
-        <p>#</p>
-        <p>Titulo cancion</p>
-        <p>3:00</p>
-      </div>
-      <div class="cancion">
-        <p>#</p>
-        <p>Titulo cancion</p>
-        <p>3:00</p>
-      </div>
-      <div class="cancion">
-        <p>#</p>
-        <p>Titulo cancion</p>
-        <p>3:00</p>
+      <div class="prueba">
+        <div class="cupon">
+          <h2>Cupón</h2>
+          <br />
+          <div class="codigo">
+            <input type="text" placeholder="ingresa el cupón" />
+            <button>Aplicar</button>
+          </div>
+        </div>
+        <div class="subtotal">
+          <h2>Subtotal</h2>
+          <br />
+          <div class="precio">
+            <p><strong>$12.34</strong></p>
+            <button>Pagar</button>
+          </div>
+        </div>
       </div>
     </div>
     <footer class="foot">
