--- a/src/src/views/users/login.ejs
+++ b/src/src/views/users/login.ejs
@@ -35,7 +35,7 @@
               <button type="submit" id="submit-button">Iniciar Sesión</button>
           </form>
           <p>¿Olvidaste la contraseña? <a href="#" target="_blank"><br>Recuperar contraseña ></a></p>
-          <p>¿No tienes una cuenta? <a href="/registro">Crear cuenta ></a></p>
+          <p>¿No tienes una cuenta? <a href="/usuario/registro">Crear cuenta ></a></p>
       </section>
     </div>
     <footer class="foot">
