--- a/src/src/views/main/index.ejs
+++ b/src/src/views/main/index.ejs
@@ -20,7 +20,7 @@
         <a class="logo" href="/"><img class="BMG" src="/images/logoBMG.png" alt="Logo del Sitio E-commerceBGG"></a> <!--<i class="fas fa-compact-disc"></i>-->
         <div><input type="text" class="seeker"></div>
         <a class="search" href="#"><i class="fas fa-search"></i></a>
-        <a href="/registro" class="user"><i class="far fa-user"></i></a>
+        <a href="/usuario/registro" class="user"><i class="far fa-user"></i></a>
         <a class="cart" href="/carrito-de-compras"><i class="fas fa-shopping-cart"></i></a>
     </header>
     <section class="menu">
@@ -67,19 +67,19 @@
             <img id="strictly" src="/images/strictlyrhythm.jpg" alt="Imágen de Album">
             <h2>Lo mejor de Strictly Rhythm</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores accusamus dolor aperiam! Nesciunt blanditiis aliquid explicabo fugit possimus quia esse? Tempora, nemo aspernatur? Sit enim possimus, dolor tempora laboriosam fugiat.</p>
-            <a href="/detalle-del-producto">ir a la colección ---></a>
+            <a href="/productos/1">ir a la colección ---></a>
         </article>
         <article class="album-home" id="rock">
             <img id="beatles" src="/images/pleasepleaseme.jpg" alt="Imágen de Album">
             <h2>El inicio de una gran historia</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores accusamus dolor aperiam! Nesciunt blanditiis aliquid explicabo fugit possimus quia esse? Tempora, nemo aspernatur? Sit enim possimus, dolor tempora laboriosam fugiat.</p>
-            <a href="/detalle-del-producto">ir a la colección ---></a>
+            <a href="/productos/1">ir a la colección ---></a>
         </article>
         <article class="album-home" id="techno">
             <img id="underground" src="/images/greenvelvet.jpg" alt="Imágen de Album">
             <h2>Underground para variar</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores accusamus dolor aperiam! Nesciunt blanditiis aliquid explicabo fugit possimus quia esse? Tempora, nemo aspernatur? Sit enim possimus, dolor tempora laboriosam fugiat.</p>
-            <a href="/detalle-del-producto">ir a la colección ---></a>
+            <a href="/productos/1">ir a la colección ---></a>
         </article>
     </section>
     <footer class="foot">
