--- a/src/src/views/products/productDetail.ejs
+++ b/src/src/views/products/productDetail.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styleDetail.css" />
+    <link rel="stylesheet" href="/css/styleDetail.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
@@ -25,7 +25,7 @@
       <a class="logo" href="/"><img class="BMG" src="/images/logoBMG.png" alt="Logo del Sitio E-commerceBGG"></a> <!--<i class="fas fa-compact-disc"></i>-->
       <div><input type="text" class="seeker"></div>
       <a class="search" href="#"><i class="fas fa-search"></i></a>
-      <a href="/registro" class="user"><i class="far fa-user"></i></a>
+      <a href="/usuario/registro" class="user"><i class="far fa-user"></i></a>
       <a class="cart" href="/carrito-de-compras"><i class="fas fa-shopping-cart"></i></a>
     </header>
     <section class="menu">
