--- a/src/src/views/users/register.ejs
+++ b/src/src/views/users/register.ejs
@@ -4,40 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar Sesión</title>
+    <title>Registro</title>
     <!-- Tipografía -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
     <!-- Normative.css Para que nuestros estilos y seteos en los docs HTML, y asi hacer que los elementos HTML se muestren constantes y homogeneos en los diferentes navegadores web. No es obligatorio usarla siempre, pero es recomendada.-->
     <link rel="stylesheet" href="/css/normalize.css">
     <!-- Vínculo con su Hoja de Estilo o hojas, vinculamos nuestra hoja de estilo CSS para hacer relación con los respectivos HTML eLements de acuerdo a los 5 diferentes selectores que podemos llgar a usar por clasificación -->
-    <link rel="stylesheet" href="/css/stylesLogin.css">
+    <link rel="stylesheet" href="/css/stylesRegister.css">
     <!-- Vinculo de Images con FontAwesone -->
     <script src="https://kit.fontawesome.com/c1014e3fce.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <a class="logo" href="/"><img class="BMG" src="/images/logoBMG.png" alt="Logo del Sitio E-commerceBGG"></a> <!--<i class="fas fa-compact-disc"></i>-->
-    <div id="main">
-      <section id="login-and-text-container">
-          <h1>Iniciar Sesión</h1>
-          <form id="login" action="/ruta" method="POST">
-              <article>
-                  <label for="email">Correo electrónico :</label>
-                  <input type="text" name="email" id="email" required>
-              </article>
-              <article>
-                  <label for="password">Contraseña</label>
-                  <input type="password" name="password" id="password" required>
-              </article>
-              <article id="remember-general">
-                <label for="remember" id="label-remember">Recuerdame</label>
-                <input type="checkbox" name="recuerdame" id="remember">
-                </article>
-              <button type="submit" id="submit-button">Iniciar Sesión</button>
-          </form>
-          <p>¿Olvidaste la contraseña? <a href="#" target="_blank"><br>Recuperar contraseña ></a></p>
-          <p>¿No tienes una cuenta? <a href="/registro">Crear cuenta ></a></p>
-      </section>
-    </div>
+    <section id="register-and-text-container">
+        <h1>Registro</h1>
+        <form id="register" action="/ruta" method="POST">
+            <article>
+                <label for="name">Nombre :</label>
+                <input type="text" name="name" id="name" required>
+            </article>
+            <article>
+                <label for="email">Correo electrónico :</label>
+                <input type="text" name="email" id="email" required>
+            </article>
+            <article>
+                <label for="password">Contraseña</label>
+                <input type="password" name="password" id="password" required>
+            </article>
+            <article>
+                <label for="rewrite-password">Vuelva a escribir la contraseña :</label>
+                <input type="password" name="rewrite-password" id="rewrite-password" required>
+            </article>
+            <button type="submit" id="submit-button">Registrarse</button>
+        </form>
+        <p>Al crear la cuenta, acepta las <a href="#" target="_blank">Condiciones de uso</a> y el <br><a href="#" target="_blank">Aviso de Privacidad</a> de BMG Records.</p>
+        <p>¿Ya tienes una cuenta? <a href="/usuario/inicio-de-sesion">Inicia Sesión ></a></p>
+    </section>
     <footer class="foot">
         <div id="footer-desktop-view">
             <div id="logo-social-networks">
