Correcciones de Vistas en Doc EJS y en Hojas de Estilo CSS
Se modificaron las reglas de estilo para que se mostrarán correctamente
sin la hoja de normalize.css, en los archivos de registro, inicio de
sesión e index, con sus respectivas hojas de estilo.

--- a/src/src/views/main/index.ejs
+++ b/src/src/views/main/index.ejs
@@ -18,7 +18,7 @@
     <header class="main-header">
         <a class="hamburguer-button" href="#"><i class="fas fa-bars"></i></a>
         <a class="logo" href="/"><img class="BMG" src="/images/logoBMG.png" alt="Logo del Sitio E-commerceBGG"></a> <!--<i class="fas fa-compact-disc"></i>-->
-        <div><input type="text" class="seeker"></div>
+        <input type="text" class="seeker">
         <a class="search" href="#"><i class="fas fa-search"></i></a>
         <a href="/usuario/registro" class="user"><i class="far fa-user"></i></a>
         <a class="cart" href="/carrito-de-compras"><i class="fas fa-shopping-cart"></i></a>
