--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -3,6 +3,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+body {
+    margin: 0;
+}
+
 .main-header {
     display: flex;
     position: relative;
@@ -121,7 +125,7 @@
 .first-section {
     background-image: url('/images/fondoPrincipal.jpg');
     background-size: cover;
-    height: 670px;
+    height: 690px;
 }
 
 #principal-title {
@@ -592,7 +596,7 @@ footer h2 {
 
 
     .first-section {
-        height: 480px;
+        height: 500px;
     }
 
     #principal-title {
@@ -722,7 +726,7 @@ footer h2 {
     /*Font-size the p de albums en 18 normalmente, hacerla crecer hasta 19 0 20 px y aumentar el margin del parrafo también*/
 
     .first-section {
-        height: 620px;
+        height: 650px;
     }
 
     #principal-title {
@@ -826,7 +830,7 @@ footer h2 {
     }
 
     .first-section {
-        height: 680px;
+        height: 685px;
     }
 
     .title-paragraph-and-elements-until-992 {
@@ -850,7 +854,7 @@ footer h2 {
     }
 
     .album-home {
-        max-height: 700px;
+        max-height: 720px;
     }
 
     .foot {
@@ -875,13 +879,5 @@ footer h2 {
         font-size: 16px;
     }
 
-    .foot h2 {
-        margin-top: 60px;
-    }
-
-    
-    .foot {
-        height: 100%;
-    }
 
 }
