--- a/src/src/views/products/productDetail.ejs
+++ b/src/src/views/products/productDetail.ejs
@@ -4,41 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"/>
+    <script src="https://kit.fontawesome.com/c1014e3fce.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/styleDetail.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
-      rel="stylesheet"
-    />
-      <link rel="stylesheet" href="/css/styles.css">
-      <script src="https://kit.fontawesome.com/c1014e3fce.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/header-footer.css">
     <title>Producto</title>
   </head>
   <body>
-    <header class="main-header">
-      <a class="hamburguer-button" href="#"><i class="fas fa-bars"></i></a>
-      <a class="logo" href="/"><img class="BMG" src="/images/logoBMG.png" alt="Logo del Sitio E-commerceBGG"></a> <!--<i class="fas fa-compact-disc"></i>-->
-      <div><input type="text" class="seeker"></div>
-      <a class="search" href="#"><i class="fas fa-search"></i></a>
-      <a href="/usuario/registro" class="user"><i class="far fa-user"></i></a>
-      <a class="cart" href="/carrito-de-compras"><i class="fas fa-shopping-cart"></i></a>
-    </header>
-    <section class="menu">
-      <ul id="menu-list">
-          <li id="menu-item">Iniciar Sesión</li>
-          <li id="menu-item">Registrarse</li>
-      </ul>
-    </section>
-    <section class="searcher">
-      <input type="text" id="searcher-field">
-      <button id="search-field-item"><i class="fas fa-search"></i></button>
-    </section>
-  
+    <%- include('../partials/header') %>  
     <div class="banner">
       <div class="banner-fondo">
         <div class="banner-fondo-img"></div>
@@ -100,42 +74,6 @@
         <p>3:00</p>
       </div>
     </div>
-    <footer class="foot">
-      <div id="footer-desktop-view">
-          <div id="logo-social-networks">
-              <img id="BMGfoot" src="/images/logoBMG-blanco.png" alt="Logo del Sitio E-commerceBGG">
-              <article class="social-networks">
-                  <a href="#" class="social-logo" id="facebook"><i class="fab fa-facebook"></i></a>
-                  <a href="#" class="social-logo" id="twitter"><i class="fab fa-twitter-square"></i></i></a>
-                  <a href="#" class="social-logo" id="instagram"><i class="fab fa-instagram"></i></i></a>
-              </article>
-          </div>
-          <div class="extra-info" id="first">
-                      <h3>Título de la Sección 1</h3>
-                      <ul class="unordered-list">
-                          <li>Elemento 1</li>
-                          <li>Elemento 2</li>
-                          <li>Elemento 3</li>
-                      </ul>
-          </div>
-          <div class="extra-info" id="second">
-                      <h3>Título de la Sección 2</h3>
-                      <ul class="unordered-list">
-                          <li>Elemento 1</li>
-                          <li>Elemento 2</li>
-                          <li>Elemento 3</li>
-                      </ul>
-          </div>
-          <div class="extra-info" id="third">
-                      <h3>Título de la Sección 3</h3>
-                      <ul class="unordered-list">
-                          <li>Elemento 1</li>
-                          <li>Elemento 2</li>
-                          <li>Elemento 3</li>
-                      </ul>
-          </div>
-      </div>
-      <h2>@2021 by BMG Records. Todos los Derechos Reservados.</h2>
-  </footer>
+    <%- include('../partials/footer') %>
   </body>
 </html>
