Separación Completa de los Componentes Repetidos en Archivos Parciales
Se cambiaron los nombres de las hojas de estilo y se hicieron las
correcciones debidas para su funcionamiento en el Proyecto, además se
crearon otras hojas de estilo para las futuras vistas a cubrir.

Se modificaron los controladores con todos los parametros compartidos
necesarios para que los archivos parciales trabajaran correctamente con
estas vistas, especialmente la parte de <head> dado que se necesita un
titulo diferente y además una ruta relativa distinta para su hoja de
estilo correspondiente, además de la creación de algunos otros métodos
para las páginas que se necesitarán, incluyendo las dos obligadas para
este Sprint 3 de creación y edición de producto.

Los Ruteadores de cada recurso se modificaron para que respondan a cada
método de cada controlador del mismo recurso.

Y Finalmente a las vistas deseadas se les coloco la expresión del
llamado de copiado y pegado del correspondiente archivo o vista parcial
sobre ellos mismos, incluyendo ahora el <head> con todos las
configuraciones necesarias para que se muestre el título correspondiente
y se cargue la hoja de estilo apropiada.

--- a/src/src/views/main/index.ejs
+++ b/src/src/views/main/index.ejs
@@ -1,18 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Inicio</title>
-    <!-- Tipografía -->
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
-    <!-- Vínculo con su Hoja de Estilo o hojas, vinculamos nuestra hoja de estilo CSS para hacer relación con los respectivos HTML eLements de acuerdo a los 5 diferentes selectores que podemos llgar a usar por clasificación -->
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/header-footer.css">
-    <!-- Vinculo de Images con FontAwesone -->
-    <script src="https://kit.fontawesome.com/c1014e3fce.js" crossorigin="anonymous"></script>
-</head>
+<%- include('../partials/head') %>
 <body>
     <%- include('../partials/header') %>
     <section class="first-section">
