--- a/src/src/views/products/productDetail.ejs
+++ b/src/src/views/products/productDetail.ejs
@@ -1,16 +1,4 @@
-<!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"/>
-    <script src="https://kit.fontawesome.com/c1014e3fce.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/styleDetail.css" />
-    <link rel="stylesheet" href="/css/header-footer.css">
-    <title>Producto</title>
-  </head>
+<%- include('../partials/head') %>
   <body>
     <%- include('../partials/header') %>  
     <div class="banner">
