--- a/src/src/views/main/productCart.ejs
+++ b/src/src/views/main/productCart.ejs
@@ -1,24 +1,4 @@
-<!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/styleCart.css" />
-    <link rel="stylesheet" href="/css/header-footer.css">
-    <script src="https://kit.fontawesome.com/c1014e3fce.js" crossorigin="anonymous"></script>
-    <title>Carrito</title>
-  </head>
+<%- include('../partials/head') %>
   <body>
     <%- include('../partials/header') %>    
     <div class="cuerpo">
