--- a/src/src/views/users/login.ejs
+++ b/src/src/views/users/login.ejs
@@ -1,18 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar Sesión</title>
-    <!-- Tipografía -->
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
-    <!-- Vínculo con su Hoja de Estilo o hojas, vinculamos nuestra hoja de estilo CSS para hacer relación con los respectivos HTML eLements de acuerdo a los 5 diferentes selectores que podemos llgar a usar por clasificación -->
-    <link rel="stylesheet" href="/css/stylesLogin.css">
-    <link rel="stylesheet" href="/css/header-footer.css">
-    <!-- Vinculo de Images con FontAwesone -->
-    <script src="https://kit.fontawesome.com/c1014e3fce.js" crossorigin="anonymous"></script>
-</head>
+<%- include('../partials/head') %>
 <body>
     <a class="central-logo" href="/"><img class="central-BMG" src="/images/logoBMG.png" alt="Logo del Sitio E-commerceBGG"></a> <!--<i class="fas fa-compact-disc"></i>-->
     <div id="main">
